--- a/Menu/Menu.css
+++ b/Menu/Menu.css
@@ -3,10 +3,32 @@
 body {
 
     background-color: #F6EED2;
+    
 }
 
 /*Header*/
 
+#logobox {
+
+    background-color: rgb(114, 0, 0, 0.50);
+    
+    position: absolute;
+    border: white groove 3px;
+    border-radius: 20px;
+    left: 45%;
+    top: 50px;
+    width: 100px;
+    height: 140px;
+}
+
+#logo {
+
+    width: 100px;
+    left: 45.25%;
+    top: 55px;
+    position: absolute;
+    
+}
 
 #sprong {
     
@@ -15,16 +37,18 @@ body {
     position: absolute;
     right:  0px;
     top: 0px;
+    z-index: -1;
 
 }
 
 .boxes {
 
-    background-color: rgb(114, 0, 0);
-    opacity: 55;
+    background: rgb(114, 0, 0, 0.50);
     position: absolute;
     width: 157px;
     height: 74px;
+    border: white groove 3px;
+    border-radius: 20px;
     
 }
 
@@ -47,3 +71,32 @@ body {
     left: 31%;
     top: 80px;
 }
+
+#Menu4 {
+
+    left: 55.8%;
+    top: 80px;
+}
+
+#Menu5 {
+
+    left: 70%;
+    top: 80px;
+}
+
+#Menu6 {
+
+    left: 84%;
+    top: 80px;
+}
+
+/*Andere deco*/
+
+.textmenu {
+
+    text-align: center;
+    color: white;
+    font-size: 25px;
+}
+
+
