--- a/About/About.css
+++ b/About/About.css
@@ -1,3 +1,100 @@
-body {
+body{
     background-color: #F6EED2
+}
+#logobox {
+
+        background-color: rgb(114, 0, 0, 0.50);
+        position: absolute;
+        border: white groove 3px;
+        border-radius: 20px;
+        left: 45%;
+        top: 50px;
+        width: 100px;
+        height: 140px;
+    }
+    
+    #logo {
+    
+        width: 100px;
+        left: 45.25%;
+        top: 55px;
+        position: absolute;
+    
+    }
+    
+    #sprong {
+    
+        width: 100%;
+        height: auto;
+        position: absolute;
+        right:  0px;
+        top: 0px;
+        z-index: -1;
+    
+    }
+    
+    .boxes {
+    
+        background: rgb(114, 0, 0, 0.50);
+        position: absolute;
+        width: 157px;
+        height: 74px;
+        border: white groove 3px;
+        border-radius: 20px;
+    
+    }
+    
+    #Menu1 {
+    
+        left: 3%;
+        top: 80px;
+    }
+    
+    #Menu2 {
+    
+        left: 17%;
+        top: 80px;
+    }
+    
+    #Menu3 {
+    
+        left: 31%;
+        top: 80px;
+    }
+    
+    #Menu4 {
+    
+        left: 55.8%;
+        top: 80px;
+    }
+    
+    #Menu5 {
+    
+        left: 70%;
+        top: 80px;
+    }
+    
+    #Menu6 {
+    
+        left: 84%;
+        top: 80px;
+    }
+    
+    .textmenu {
+    
+        text-align: center;
+        color: white;
+        font-size: 25px;
+    }
+
+.box{
+    width:1700px;
+    height: 500px;;
+    background-color: rgb(155, 153, 153);
+    margin-left:100px;
+    margin-top:350px;
+}
+#tekst{
+    margin-top:-500px;
+    text-align: center;
 }
