--- a/About/About.css
+++ b/About/About.css
@@ -87,14 +87,12 @@ body{
         font-size: 25px;
     }
 
-.box{
-    width:1700px;
-    height: 500px;;
-    background-color: rgb(155, 153, 153);
-    margin-left:100px;
-    margin-top:350px;
-}
 #tekst{
-    margin-top:-500px;
+    width:50%;
+    height:520px;;
+    background-color:  #fdeeb7;
+    margin-left:25%;
+    margin-top:400px;
     text-align: center;
+    font-family: 'Poor Story', cursive;
 }
