--- a/Menu/Diner menu/Menu.css
+++ b/Menu/Diner menu/Menu.css
@@ -11,7 +11,6 @@ body {
 #logobox {
 
     background-color: rgb(114, 0, 0, 0.50);
-    
     position: absolute;
     border: white groove 3px;
     border-radius: 20px;
@@ -50,7 +49,12 @@ body {
     border: white groove 3px;
     border-radius: 20px;
     
+    
 }
+   .boxes a:hover {
+
+        transform: scale(2);
+    }
 
 /*Aparte css voor de menu boxes*/
 
