--- a/Home/Home.css
+++ b/Home/Home.css
@@ -13,17 +13,17 @@ body {
 #tekstbox {
     background-color: #fdeeb7;
         width: 50%;
-        height: 40%px;
+        height: 60%;
         border-radius: 10px;
         padding: 25px;
-        margin: 50px;
+       
         transition: 0.7s ease;
         margin-left: 25%;
-        margin-top: 230px;
+        margin-top: 400px;
         text-align: center;
 }
 
-h2{
+h1{
     font-family: 'Indie Flower', cursive;
     font-size: 35px;
 }
