--- a/Menu/Diner menu/Menu.css
+++ b/Menu/Diner menu/Menu.css
@@ -51,10 +51,11 @@ body {
     
     
 }
-   .boxes a:hover {
+.boxes:hover {
 
-        transform: scale(2);
-    }
+    transition: 1.3s;
+    transform: scale(1.4);
+}
 
 /*Aparte css voor de menu boxes*/
 
