--- a/Contacteren/Contacteren.css
+++ b/Contacteren/Contacteren.css
@@ -1,3 +1,20 @@
+body {
+    background-color: #F6EED2;
+}
+
+#tekstbox {
+    background-color: #fdeeb7;
+        width: 50%;
+        height: 60%;
+        border-radius: 10px;
+        padding: 25px;
+        font-family: 'Poor Story', cursive;
+        transition: 0.7s ease;
+        margin-left: 25%;
+        margin-top: 400px;
+        text-align: center;
+}
+
 /*Header*/
 
 #logobox {
@@ -89,3 +106,24 @@
     color: white;
     font-size: 25px;
 }
+
+.fa {
+    padding: 20px;
+    font-size: 50px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+    border-radius: 50%;
+    text-align: center;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+
+  }
