--- a/Home/Home.css
+++ b/Home/Home.css
@@ -14,12 +14,12 @@ body {
     background-color: #fdeeb7;
         width: 50%;
         height: 60%;
-        border-radius: 10px;
+        border-radius: 50%;
         padding: 25px;
-       
+        box-shadow: 0 5px 25px rgb(114, 0, 0);
         transition: 0.7s ease;
         margin-left: 25%;
-        margin-top: 400px;
+        margin-top: 325px;
         text-align: center;
 }
 
