--- a/Menu/Diner menu/Menu.css
+++ b/Menu/Diner menu/Menu.css
@@ -14,7 +14,7 @@ body {
     position: absolute;
     border: white groove 3px;
     border-radius: 20px;
-    left: 45%;
+    left: 46%;
     top: 50px;
     width: 100px;
     height: 140px;
@@ -23,7 +23,7 @@ body {
 #logo {
 
     width: 100px;
-    left: 45.25%;
+    left: 46.25%;
     top: 55px;
     position: absolute;
     
@@ -34,7 +34,7 @@ body {
     width: 100%;
     height: auto;
     position: absolute;
-    right:  0px;
+    right: 0px;
     top: 0px;
     z-index: -1;
 
@@ -51,48 +51,102 @@ body {
     
     
 }
-.boxes:hover {
+    .boxes:hover {
 
-    transition: 1.3s;
-    transform: scale(1.4);
-}
+        transform: scale(1.4);
+    }
 
 /*Aparte css voor de menu boxes*/
 
 #Menu1 {
 
-    left: 3%;
+    left: 4%;
     top: 80px;
 }
 
 #Menu2 {
 
-    left: 17%;
+    left: 18%;
     top: 80px;
 }
 
 #Menu3 {
 
-    left: 31%;
+    left: 32%;
     top: 80px;
 }
 
 #Menu4 {
 
-    left: 55.8%;
+    left: 56.8%;
     top: 80px;
 }
 
 #Menu5 {
 
-    left: 70%;
+    left: 71%;
     top: 80px;
 }
 
 #Menu6 {
 
-    left: 84%;
+    left: 85%;
     top: 80px;
+}
+
+/*Menu boxen*/
+
+.Menuboxen {
+
+    background-color: #fdeeb7;
+    width: 300px;
+    height: 150px;
+    margin: 30px;
+    top: 300px;
+    position: relative;
+    left: 0%;
+}
+
+.Menuboxen2 {
+
+    background-color: #fdeeb7;
+    width: 300px;
+    height: 150px;
+    margin: 30px;
+    bottom: 240px;
+    position: relative;
+    left: 24.5%;
+}
+
+.Menuboxen3 {
+
+    background-color: #fdeeb7;
+    width: 300px;
+    height: 150px;
+    margin: 30px;
+    bottom: 780px;
+    position: relative;
+    left: 45%;
+}
+
+.Menuboxen4 {
+
+    background-color: #fdeeb7;
+    width: 300px;
+    height: 150px;
+    margin: 30px;
+    bottom: 240px;
+    position: relative;
+    left: 80%;
+}
+
+/*Footer*/
+
+footer {
+
+    background-color: #fdeeb7;
+    width: 100%;
+    height: 175px;
 }
 
 /*Andere deco*/
