--- a/Reserveren/Reserveren.css
+++ b/Reserveren/Reserveren.css
@@ -2,7 +2,6 @@ body{
     background-color: #F6EED2
 }
 #logobox {
-
         background-color: rgb(114, 0, 0, 0.50);
         position: absolute;
         border: white groove 3px;
@@ -12,76 +11,53 @@ body{
         width: 100px;
         height: 140px;
     }
-    
     #logo {
-    
         width: 100px;
         left: 45.25%;
         top: 55px;
         position: absolute;
-    
     }
-    
     #sprong {
-    
         width: 100%;
         height: auto;
         position: absolute;
         right:  0px;
         top: 0px;
         z-index: -1;
-    
     }
-    
     .boxes {
-    
         background: rgb(114, 0, 0, 0.50);
         position: absolute;
         width: 157px;
         height: 74px;
         border: white groove 3px;
         border-radius: 20px;
-    
     }
-    
     #Menu1 {
-    
         left: 3%;
         top: 80px;
     }
-    
     #Menu2 {
-    
         left: 17%;
         top: 80px;
     }
-    
     #Menu3 {
-    
         left: 31%;
         top: 80px;
     }
-    
     #Menu4 {
-    
         left: 55.8%;
         top: 80px;
     }
-    
     #Menu5 {
-    
         left: 70%;
         top: 80px;
     }
-    
     #Menu6 {
-    
         left: 84%;
         top: 80px;
     }
-    
     .textmenu {
-    
         text-align: center;
         color: white;
         font-size: 25px;
@@ -95,11 +71,11 @@ body{
         background: #f1f1f1;
       }
       input[type=text]:focus, input[type=password]:focus {
-        background-color: #ddd;
+        background-color: rgb(114, 0, 0, 0.50);
         outline: none;
       }
       hr {
-        border: 1px solid #f1f1f1;
+        border: 1px solid rgb(114, 0, 0, 0.50);
         margin-bottom: 25px;
         margin-top: 50px;
       }
