--- a/Contacteren/Contacteren.css
+++ b/Contacteren/Contacteren.css
@@ -8,10 +8,11 @@ body {
         height: 60%;
         border-radius: 10px;
         padding: 25px;
+        box-shadow: 0 5px 25px rgb(114, 0, 0);
         font-family: 'Poor Story', cursive;
         transition: 0.7s ease;
         margin-left: 25%;
-        margin-top: 400px;
+        margin-top: 380px;
         text-align: center;
 }
 
