--- a/About/About.css
+++ b/About/About.css
@@ -42,6 +42,7 @@ body{
         top: 80px;
     }
     #Menu3 {
+        background-color: rgb(255, 117, 93);
         left: 33%;
         top: 80px;
     }
