--- a/Menu/Diner menu/Menu.css
+++ b/Menu/Diner menu/Menu.css
@@ -3,7 +3,7 @@
 body {
 
     background-color: #F6EED2;
-    height: fit-content;
+    height: 1000px;
 }
 
 /*Header*/
@@ -37,6 +37,7 @@ body {
     right: 0px;
     top: 0px;
     z-index: -1;
+    border-bottom: groove black 4px;
 
 }
 
@@ -94,6 +95,18 @@ body {
     top: 80px;
 }
 
+/*dropdown*/
+
+.dropdown-content {
+
+    display: none;
+    position: absolute;
+    background-color: rgb(114, 0, 0, 0.50);
+    width: 157px;
+    border: white groove 3px;
+    z-index: 1;
+}
+
 /*Menu boxen*/
 
 .Menuboxen {
@@ -140,13 +153,18 @@ body {
     left: 75.5%;
 }
 
+
+
 /*Footer*/
 
 footer {
 
     background-color: #fdeeb7;
-    width: 100%;
+    width: 101%;
     height: 175px;
+    position: relative;
+    top: -1250px;
+    right: 8px;
 }
 
 /*Andere deco*/
@@ -156,6 +174,18 @@ footer {
     text-align: center;
     color: white;
     font-size: 25px;
+}
+
+#footertext {
+
+    padding: 40px;
+}
+
+#footerlink {
+
+    text-align: right;
+    bottom: 100px;
+    position: relative;
 }
 
 
