--- a/Menu/Diner menu/Menu.css
+++ b/Menu/Diner menu/Menu.css
@@ -56,6 +56,7 @@ body {
 }
     .boxes:hover {
 
+        background-color: rgba(62, 0, 0, 0.5);
         transform: scale(1.4);
     }
 
@@ -71,6 +72,7 @@ body {
     background-color: rgb(255, 117, 93);
     left: 18%;
     top: 80px;
+    display: inline-block;
 }
 
 #Menu3 {
@@ -106,9 +108,29 @@ body {
     background-color: rgb(114, 0, 0, 0.50);
     width: 157px;
     border: white groove 3px;
+    border-radius: 20px;
     z-index: 1;
-
+    margin-top: 5px;
 }
+
+.dropdown-content a {
+    
+    color: rgb(255, 255, 255);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+    #Menu2:hover .dropdown-content a:hover {
+
+        background-color: rgba(62, 0, 0, 0.5);
+        border-radius: 20px;
+    }
+
+    #Menu2:hover .dropdown-content {
+
+        display: block;
+    }
 
 /*Menu boxen*/
 
@@ -176,7 +198,7 @@ footer {
 
     background-color: #fdeeb7;
     width: 101%;
-    height: 175px;
+    height: 190px;
     position: absolute;
     top: 2000px;
     right: 8px;
