--- a/Home/Home.css
+++ b/Home/Home.css
@@ -33,6 +33,8 @@ h3{
     font-size: 24px;
 }
 
+/*Header*/
+
 #logobox {
 
     background-color: rgb(114, 0, 0, 0.50);
@@ -62,6 +64,7 @@ h3{
     right: 0px;
     top: 0px;
     z-index: -1;
+    border-bottom: groove black 4px;
 
 }
 
@@ -78,46 +81,81 @@ h3{
 }
     .boxes:hover {
 
+        background-color: rgba(62, 0, 0, 0.5);
         transform: scale(1.4);
     }
 
 /*Aparte css voor de menu boxes*/
 
 #Menu1 {
-    background-color: rgb(255, 117, 93);
-    left: 5%;
+
+    left: 4%;
     top: 80px;
 }
 
 #Menu2 {
-
-    left: 19%;
+    background-color: rgb(255, 117, 93);
+    left: 18%;
     top: 80px;
+    display: inline-block;
 }
 
 #Menu3 {
 
-    left: 33%;
+    left: 32%;
     top: 80px;
 }
 
 #Menu4 {
 
-    left: 57.8%;
+    left: 56.8%;
     top: 80px;
 }
 
 #Menu5 {
 
-    left: 72%;
+    left: 71%;
     top: 80px;
 }
 
 #Menu6 {
 
-    left: 86%;
+    left: 85%;
     top: 80px;
 }
+
+/*dropdown*/
+
+.dropdown-content {
+
+    display: none;
+    position: absolute;
+    background-color: rgb(114, 0, 0, 0.50);
+    width: 157px;
+    border: white groove 3px;
+    border-radius: 20px;
+    z-index: 1;
+    margin-top: 5px;
+}
+
+.dropdown-content a {
+    
+    color: rgb(255, 255, 255);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+    #Menu2:hover .dropdown-content a:hover {
+
+        background-color: rgba(62, 0, 0, 0.5);
+        border-radius: 20px;
+    }
+
+    #Menu2:hover .dropdown-content {
+
+        display: block;
+    }
 
 .textmenu {
 
