--- a/Reserveren/Reserveren.css
+++ b/Reserveren/Reserveren.css
@@ -1,68 +1,137 @@
 body{
     background-color: #F6EED2
 }
+
+/*Header*/
+
 #logobox {
-        background-color: rgb(114, 0, 0, 0.50);
-        position: absolute;
-        border: white groove 3px;
+
+    background-color: rgb(114, 0, 0, 0.50);
+    position: absolute;
+    border: white groove 3px;
+    border-radius: 20px;
+    left: 46.5%;
+    top: 50px;
+    width: 100px;
+    height: 140px;
+}
+
+#logo {
+
+    width: 100px;
+    left: 46.75%;
+    top: 55px;
+    position: absolute;
+    
+}
+
+#sprong {
+    
+    width: 100%;
+    height: auto;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    z-index: -1;
+    border-bottom: groove black 4px;
+
+}
+
+.boxes {
+
+    background: rgb(114, 0, 0, 0.50);
+    position: absolute;
+    width: 157px;
+    height: 74px;
+    border: white groove 3px;
+    border-radius: 20px;
+    
+    
+}
+    .boxes:hover {
+
+        background-color: rgba(62, 0, 0, 0.5);
+        transform: scale(1.4);
+    }
+
+/*Aparte css voor de menu boxes*/
+
+#Menu1 {
+
+    left: 4%;
+    top: 80px;
+}
+
+#Menu2 {
+    background-color: rgb(255, 117, 93);
+    left: 18%;
+    top: 80px;
+    display: inline-block;
+}
+
+#Menu3 {
+
+    left: 32%;
+    top: 80px;
+}
+
+#Menu4 {
+
+    left: 56.8%;
+    top: 80px;
+}
+
+#Menu5 {
+
+    left: 71%;
+    top: 80px;
+}
+
+#Menu6 {
+
+    left: 85%;
+    top: 80px;
+}
+
+/*dropdown*/
+
+.dropdown-content {
+
+    display: none;
+    position: absolute;
+    background-color: rgb(114, 0, 0, 0.50);
+    width: 157px;
+    border: white groove 3px;
+    border-radius: 20px;
+    z-index: 1;
+    margin-top: 5px;
+}
+
+.dropdown-content a {
+    
+    color: rgb(255, 255, 255);
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+    #Menu2:hover .dropdown-content a:hover {
+
+        background-color: rgba(62, 0, 0, 0.5);
         border-radius: 20px;
-        left: 46.5%;
-        top: 50px;
-        width: 100px;
-        height: 140px;
     }
-    #logo {
-        width: 100px;
-        left: 46.25%;
-        top: 55px;
-        position: absolute;
+
+    #Menu2:hover .dropdown-content {
+
+        display: block;
     }
-    #sprong {
-        width: 100%;
-        height: auto;
-        position: absolute;
-        right:  0px;
-        top: 0px;
-        z-index: -1;
-    }
-    .boxes {
-        background: rgb(114, 0, 0, 0.50);
-        position: absolute;
-        width: 157px;
-        height: 74px;
-        border: white groove 3px;
-        border-radius: 20px;
-    }
-    #Menu1 {
-        left: 5%;
-        top: 80px;
-    }
-    #Menu2 {
-        left: 19%;
-        top: 80px;
-    }
-    #Menu3 {
-        left: 33%;
-        top: 80px;
-    }
-    #Menu4 {
-        background-color: rgb(255, 117, 93);
-        left: 57.8%;
-        top: 80px;
-    }
-    #Menu5 {
-        left: 72%;
-        top: 80px;
-    }
-    #Menu6 {
-        left: 86%;
-        top: 80px;
-    }
+
     .textmenu {
         text-align: center;
         color: white;
         font-size: 25px;
     }
+    
     input[type=text], input[type=password] {
         width: 100%;
         padding: 15px;
