--- a/Bestellen/Bestellen.css
+++ b/Bestellen/Bestellen.css
@@ -26,8 +26,8 @@ body {
     border-radius: 20px;
     left: 46.5%;
     top: 50px;
-    width: 100px;
-    height: 140px;
+    width: 106px;
+    height: 146px;
 }
 
 #logo {
@@ -55,8 +55,8 @@ body {
 
     background: rgb(114, 0, 0, 0.50);
     position: absolute;
-    width: 157px;
-    height: 74px;
+    width: 163px;
+    height: 80px;
     border: white groove 3px;
     border-radius: 20px;
     
@@ -145,7 +145,8 @@ body {
     text-align: center;
     color: white;
     font-size: 25px;
-    padding-top: 20px;
+    top: 2%;
+    transform: translate(0 , -2% );
 }
 
     * {box-sizing: border-box;}
