--- a/Bestellen/Bestellen.css
+++ b/Bestellen/Bestellen.css
@@ -180,3 +180,27 @@ body {
       background-color: #fdeeb7;
       padding: 20px;
     }
+
+/*Footer*/
+
+footer {
+
+    background-color: #fdeeb7;
+    width: 101%;
+    height: 190px;
+    position: absolute;
+    top: 1000px;
+    right: 8px;
+}
+
+#footertext {
+
+    padding: 40px;
+}
+
+#footerlink {
+
+    text-align: right;
+    bottom: 100px;
+    position: relative;
+}
