--- a/Menu/Drankkaart/Drank.css
+++ b/Menu/Drankkaart/Drank.css
@@ -193,3 +193,27 @@ body {
     top: -200px;
     position: relative; 
 }
+
+/*Footer*/
+
+footer {
+
+    background-color: #fdeeb7;
+    width: 101%;
+    height: 190px;
+    position: absolute;
+    top: 4250px;
+    right: 8px;
+}
+
+#footertext {
+
+    padding: 40px;
+}
+
+#footerlink {
+
+    text-align: right;
+    bottom: 100px;
+    position: relative;
+}
