--- a/Reserveren/Reserveren.css
+++ b/Reserveren/Reserveren.css
@@ -173,6 +173,7 @@ body{
 
       input[type=email], select, textarea {
         width: 100%;
+        background: #f1f1f1;
         padding: 12px;
         border: 1px solid #852828;
         border-radius: 4px;
